--- a/public/frontend/css/index.css
+++ b/public/frontend/css/index.css
@@ -94,22 +94,22 @@ li{list-style: none;}
 .con2-left-xian{width: 831px;height: 1px;background: #efefef;float: left;margin: 17px 0px 0px 14px;}
 
 .con2-left-left{width: 260px;height: 410px;float: left;margin: 17px 0px 0px 14px;}
-.con2-left-left img{display: block;width: 100%;height: 242px;}
+.con2-left-left img{display: block;width: 100%;height: 242px; border-radius: 5px;}
 .con2-left-left p{display: block;font-size: 11px;color: #929292;line-height: 26px;margin-top: 7px;letter-spacing: 2px;height: 123px;}
 .con2-left-left a{display: block;width: 72px;height: 18px;border: 1px solid #666666;border-radius: 4px;font-size: 11px;color: #666666;line-height: 18px;text-align: center; }
 .con2-left-left a:hover{border: 1px solid #e4000f;background: #e4000f;color: white;}
 
 .con2-left-right{width: 553px;height: 400px;float: left;margin: 17px 0px 0px 20px; }
-.con2-left-right li{width: 175px;height: 200px;float: left;margin-left: 14px;}
-.con2-left-right li div{width: 175px;height: 140px;background-size:100% 100% ;}
-.con2-left-right li div h1{display: block;width: 160px;height: 17px;font-size: 17px;color: #676767;float: left;margin: 10px 0px 0px 9px;line-height: 17px;font-weight: normal;}
-.con2-left-right li div h2{display: block;width: 160px;height: 12px;font-size: 12px;color: #676767;line-height: 12px;float: left;margin: 6px 0px 0px 9px;font-weight: normal;}
-.con2-left-right li p{display: block;height: 10px;width: 100%;line-height: 10px;font-size: 10x;color: #2b2b2b;margin-top: 10px;}
-.con2-left-right li p font{color: #d80916;}
-.con2-left-right li h3{display: block;height: 12px;color: #e8000f;float: left;margin: 10px 0px 0px 0px;}
-.con2-left-right li a{display: block;width: 72px;height: 18px;border: 1px solid #666666;border-radius: 4px;font-size: 11px;color: #666666;line-height: 18px;text-align: center;float: right;margin-top: 8px;}
-
-.con2-left-right li a:hover{border: 1px solid #e4000f;background: #e4000f;color: white;}
+.con2-left-right dl{width: 175px;height: 200px;float: left;margin-left: 9px;}
+.con2-left-right dl dt{width: 175px;height: 140px; position: relative;}
+.con2-left-right dl dt .brandinfo{position: absolute; top:5px; left: 10px;}
+.con2-left-right dl dt strong{display: block;width: 160px;height: 17px;font-size: 17px;color: #676767;float: left;margin: 10px 0px 0px 9px;line-height: 17px;font-weight: normal;}
+.con2-left-right dl dt p{display: block;width: 160px;height: 12px;font-size: 12px;color: #676767;line-height: 12px;float: left;margin: 6px 0px 0px 9px;font-weight: normal;}
+.con2-left-right dd p{display: block;height: 10px;width: 100%;line-height: 10px; font-size:10px; color: #2b2b2b;margin-top: 10px;}
+.con2-left-right dl dd p font{color: #d80916;}
+.con2-left-right dl dd h3{display: block;height: 12px;color: #e8000f;float: left;margin: 10px 0px 0px 0px;}
+.con2-left-right dl dd a{display: block;width: 72px;height: 18px;border: 1px solid #666666;border-radius: 4px;font-size: 11px;color: #666666;line-height: 18px;text-align: center;float: right;margin-top: 8px;}
+.con2-left-right dl dd a:hover{border: 1px solid #e4000f;background: #e4000f;color: white;}
 
 .con2-right-top-1{display: block;font-size: 16px;height: 16px;color: #333333;margin: 17px 0px 0px 20px;line-height: 16px;float: left;}
 
