--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -138,18 +138,8 @@
 	opacity:1;
 	box-shadow:rgba(0,0,0,0.1) 1px 1px 0px;	
 }
-
-
-
-
 /*Header*/
-h1, h2{text-shadow:none; text-align:center;}
-h1{	color: #666; text-transform:uppercase;	font-size:36px;}
-h2{ color: #7f8c8d; font-family: Neucha, Arial, sans serif; font-size:18px; margin-bottom:30px;} 
-
-
-
-
+h2{ color: #7f8c8d; font-family: Neucha, Arial, sans serif; font-size:18px;}
 /*ANIMATION*/
 #slider-wrap ul, #pagination-wrap ul li{
 	-webkit-transition: all 0.3s cubic-bezier(1,.01,.32,1);
@@ -158,7 +148,59 @@ h2{ color: #7f8c8d; font-family: Neucha, Arial, sans serif; font-size:18px; marg
 	-ms-transition: all 0.3s cubic-bezier(1,.01,.32,1);
 	transition: all 0.3s cubic-bezier(1,.01,.32,1);	
 }
-
-
-
-
+.xm-qingxian {    width: 232px;    height: 468px;    background-color: #fff}
+.xm-qingxian h2 {padding: 18px 20px 9px 20px}
+.xm-carousel,.xm-carousel .ovh,.xm-carousel .ban-ul,.xm-carousel .ban-ul .item {    height: 424px}
+.xm-carousel .ban-ul .item {    width: 232px}
+.xm-carousel .ban-ul .item img {    display: block;    height: 190px}
+.xm-carousel .ban-ul .item p {    height: 20px;    overflow: hidden}
+.xm-carousel .ban-ul .item .f16 {    margin: 17px 0 14px}
+.xm-carousel .ban-ul .item .h72 {    line-height: 24px;    color: #8c8c8c;    height: 72px;    overflow: hidden;    margin: 10px 0 14px}
+.xm-carousel .ban-ul .item .btn-bar {    height: 40px}
+.xm-carousel .ban-ul .item .btn-bar .btn {    width: 88px;    height: 38px;    line-height: 38px}
+.xm-carousel .dot {    right: 18px;    top: -38px;    width: 50px;}
+.xm-carousel .dot i {    display: inline-block;    width: 8px;    height: 8px;    border: 1px solid #d9d9d9;    border-radius: 50%;    margin: 0 2px}
+.xm-carousel .dot i.cur {    background-color: #ff552e;    border-color: #ff552e}
+.gk-data {    float: left;    width: 1020px;    overflow: hidden}
+.s-oe { color: #ff552e !important;font-weight: bold; }
+a.s-oe:hover { text-decoration: underline; }
+.s-c59 { color: #595959; }
+.s-c26 { color: #262626; }
+.s-8c  { color: #8c8c8c; }
+.xm-carousel .ban-ul .item .h72 {    line-height: 24px;    color: #8c8c8c;    height: 72px;    overflow: hidden;    margin: 10px 0 14px;}
+.xm-carousel .ban-ul .item .btn-bar {    height: 40px;}
+.btn-oe-line {    border-color: #ff552e;    color: #ff552e;}
+.btn {    border: 1px solid #e8e8e8;    border-radius: 3px;    color: #262626;    transition: all .2s linear;    cursor: pointer;    text-align: center;}
+.btn-oe {    background-color: #00b19a;    border-color: #00b19a;    color: #fff;}
+.btn-oe-line {    border-color: #00b19a;    color: #00b19a;}
+.magnify img {    transition: all .35s linear;    transform: scale(1); border-radius: 5px;}
+.hit,.fine,.second ,.launch,.brands{    background: #f7f5f5;    padding: 20px 0 0;}
+/***********幻灯**********/
+.carousel-bar1,.carousel-bar1 .ban-ul .item {    width: 760px;    height: 100%}
+.carousel-bar1 .ovh,.carousel-bar1 .ban-ul {  height: 100%}
+.carousel-bar1 .dot {    left: 0;    right: 0;    bottom: 13px;    text-align: center}
+.carousel-bar1 .dot i {    display: inline-block;    width: 8px;    height: 8px;    border: 1px solid #fff;    border-radius: 50%;    margin: 0 4px}
+.carousel-bar1 .dot i.cur {    background-color: #ff552e;    border-color: #ff552e}
+.carousel,.carousel .ovh{position:relative;}
+.carousel .ban-ul{position:absolute;left:0}
+.carousel .ban-ul .item{float:left}.carousel .dot{position:absolute;z-index:20}
+.carousel-bar1 .ovh, .carousel-bar1 .ban-ul {  width: 760px;  height: 351px;}
+.swiper-pagination-bullet{margin-right: 5px;}
+/***********paingahng***************/
+.box-shadow {	box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .05);}
+.xm-list-H224 {}
+.xm-list-H224 a{     color: #262626;     text-decoration: none;}
+.xm-list-H224 li {    float: left;    width: 670px;    height: 184px;    position: relative;    padding: 20px 20px 20px 160px;    background-color: #fff;    box-shadow: 0 1px 3px 0 rgba(0,0,0,.05);    transition: all .15s linear;    margin-bottom: 20px}
+.xm-list-H224 li .btn-duibi {    position: absolute;    top: 15px;    right: 15px;    display: none;    width: 60px;    height: 24px;    background-color: #bfbfbf;    border-radius: 3px;    line-height: 24px;    text-align: center;    color: #fff;    cursor: pointer;    transition: all .15s linear}
+.xm-list-H224 li .btn-duibi .icon-Contrast {    font-size: 14px;    margin: -3px 5px 0 0}
+.xm-list-H224 li .btn-duibi:hover {    background-color: #ff552e}
+.xm-list-H224 li .img-block {    position: absolute;    left: 20px;    top: 20px;    width: 120px;    height: 120px}
+.xm-list-H224 li .f20 {    font-size: 20px;    line-height: 30px;    height: 30px;    overflow: hidden}
+.xm-list-H224 li .info {    height: 20px;    margin: 6px 0}
+.xm-list-H224 li .info span {    float: left;    width: 185px;    height: 20px;    overflow: hidden;    position: relative}
+.xm-list-H224 li .info span:first-child {    padding-right: 20px}
+.xm-list-H224 li .info span:first-child:before {    position: absolute;    top: 3px;    right: 0;    width: 1px;    height: 14px;    background-color: #eee;    content: ''}
+.xm-list-H224 li .info span:last-child {    padding-left: 20px}
+.xm-list-H224 li p {    line-height: 24px;    height: 24px;    overflow: hidden;    color: #8c8c8c}
+.xm-list-H224 li:hover {    box-shadow: 0 15px 24px 0 rgba(0,0,0,.1);    transform: translateY(-5px)}
+.xm-list-H224 li:hover .btn-duibi {    display: block}
