--- a/public/frontend/css/index.css
+++ b/public/frontend/css/index.css
@@ -239,29 +239,133 @@ td,th{padding:0;}
 .con5-right ul li a{display: block;font-size: 12px;color: #636363;line-height: 12px;}
 .con5-right ul li a font{margin-right: 20px;}
 .con5-right ul li a:hover{color: #d40822;}
+/*****************底部footer************************/
+.footer {     -webkit-font-smoothing: antialiased;    line-height: 1.8;     min-height: 50px; display: block;  margin-top: 50px;    position: relative;    background: #073648;    color: #fff;    font-size: 13px;    padding: 0px;}
+.container {
+    width: 1250px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    clear: both;
+}
+.footer a {    color: #7281AD;}
 
-.foot{width: 100%;height: 79px;background: #ededed;border-bottom: 2px solid #00b19a; clear: both}
-.foot p{display: block;width: 85px;height: 14px;float: left;margin: 20px 0px 0px 15px;font-size: 14px;line-height: 14px;color:#898989;}
-.foot p img{width: 14px;height: 14px;float: left;margin-right: 7px;}
-.foot ul{height: 36px;width: 1060px;float: left;margin: 21px 0px 0px 13px;}
-.foot ul li{float: left;}
-.foot ul li a{display: block;font-size: 13px;color: #9f9f9f;height: 13px;line-height: 13px;margin-left: 32px;}
-.foot ul li a:hover{color: #585858;transition: 1s;}
+.footer a:hover {    color: #fff;}
 
-.footer1{width: 100%;height: 80px;background: white;border-bottom: 1px solid #b5c0be;}
-.footer1 p{display: block;width: 100%;padding-top: 20px;font-size: 12px;color: #7d7d7d;line-height: 22px;text-align: center;}
+.footer-top {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 15px;
+    border-bottom: solid 1px #7281AD;
+    clear: both;
+}
 
-.footer2{height: 122px;width: 100%;background: white;}
-.footer2 p{display: block;width: 100%;line-height: 34px;color: #717171;text-align: center;padding-top: 9px;}
+.footer .about {
+    float: left;
+    width: 132px;
+}
+
+.footer .contact {
+    float: left;
+    width: 220px;
+    margin-right: 30px;
+}
+
+.footer .service {
+    float: left;
+    width: 372px;
+}
+
+.footer .service a {
+    margin-right: 15px;
+    display: inline-block;
+}
+
+.footer .qrcode {
+    padding-top: 40px;
+    float: left;
+    width: 455px;
+}
+
+.footer-row {
+    padding-left: 72px;
+    box-sizing: border-box;
+}
+
+.footer-row-head {
+    margin-left: -72px;
+    float: left;
+}
+
+.footer-row .item {
+    float: left;
+    margin-right: 12px;
+    position: relative;
+}
+
+.footer-row .item:not(:last-child):after {
+    content: " ";
+    position: absolute;
+    height: 12px;
+    width: 1px;
+    background: #7281AD;
+    right: -7px;
+    top: 6px;
+}
+
+.footer-copy-bg {
+    padding-top: 5px;
+    padding-bottom: 10px;
+    margin-top: 20px;
+    background: #33485a;
+}
+
+.footer-copy {
+    font-size: 14px;
+}
+
+.footer .auth {
+    float: right;
+    margin-top: 4px;
+}
+
+.footer .auth>a {
+    margin-right: 20px;
+}
+
+.footer .qrcode-item {
+    float: right;
+    text-align: center;
+    margin-left: 50px;
+}
+
+.footer .qrcode img {
+    width: 100px;
+    display: block;
+    margin-bottom: 6px;
+}
+
+.footer h4 {
+    font-size: 14px;
+    color: #fff !important;
+}
+
+.p-t {
+    padding-top: 15px;
+}
+.container:before {
+     display: table;
+     content: " ";
+ }
+
+/**********************footerend*******************/
 
 
-.mianbaoxie{width: 1200px;height: 56px;}
-.mianbaoxie ul{height: 56px;float: left;}
-.mianbaoxie ul li{float: left;}
-.mianbaoxie ul li a{display: block;height: 56px;line-height: 56px;font-size: 12px;color: #a8a8a8;margin-left: 11px;}
-.mianbaoxie ul li p{display: block;height: 56px;line-height: 56px;font-size: 12px;color: #a8a8a8;margin-left: 11px;}
-.mianbaoxie ul li a:hover{color: #3a3a3a;}
-
+.mianbaoxie{width: 1200px;height: 56px;     background: #fff;    margin-bottom: 5px;}
+.mianbaoxie p{line-height: 56px; padding-left: 10px; color: #515151;}
+.mianbaoxie p a{color: #515151;}
+.mianbaoxie p a:hover{color: #00b19a;}
 .conl1{width: 1200px;height: 262px;background: white;}
 .conl1 img{width: 327px;height: 222px;float: left;margin: 20px 0px 0px 20px;}
 .conl1 h1{display: block;width: 802px;height: 16px;float: left;margin: 20px 0px 0px 30px;font-size: 16px;color: #8c0000;line-height: 16px;font-weight: 550;}
@@ -271,7 +375,7 @@ td,th{padding:0;}
 .conl1 ul li a:hover{color: #d60000;}
 
 .conl2{width: 1200px; margin-top: 20px;}
-.conl2-left{width: 839px;height: 2608px;float: left;background: white;}
+.conl2-left{width: 839px;float: left;background: white;}
 .conl2-left ul{width: 801px;height: 2608px;float: left;margin-left: 20px;}
 .conl2-left ul li{width: 100%;height: 179px;border-bottom: 1px dashed #e6e6e6;margin-top: 20px;}
 .conl2-left ul li img{display: block;width: 212px;height: 160px;float: left;border-radius: 5px;}
@@ -321,7 +425,7 @@ td,th{padding:0;}
 .conl2-right-3 ul li p{display: block;width: 200px;float: left;margin: 10px 0px 0px 20px;color: #818181;line-height: 24px;}
 .conl2-right-3 ul li p font{color: #d80000;}
 
-.conl2-right-4{width: 337px;height:598px ;background: white;margin-top: 20px;}
+.conl2-right-4{width: 337px;height:672px ;background: white;margin-top: 20px;}
 .conl2-right-4 h1{display: block;font-size: 16px;height: 16px;color: #575757;line-height: 16px;float: left;margin: 20px 0px 0px 20px;width: 299px;}
 .conl2-right-4 h1 a{font-size: 12px;color: #9c9c9c;float: right;font-weight: normal;}
 .conl2-right-4 h1 a:hover{color: #272727;}
@@ -333,13 +437,16 @@ td,th{padding:0;}
 .a4:hover{color:#d80000 ;}
 .conl2-right-4 p{display: block;width: 170px;height: 12px;font-size: 12px;line-height: 12px;color: #adadad;float: left;margin: 20px 0px 0px 10px;}
 .conl2-right-4 p font{float: right;}
-.pageinfo{margin-bottom: 10px;}
-.fenye{width: 1000px;height: 23px;float: left;margin-left: 107px;}
-.shangyiye{width: 56px;height: 23px;font-size: 14px ;color: #969696;line-height: 23px;text-align: center;display: block;float: left;}
-.fenye ul{width: 420px;height: 23px;float: left;margin-left: 44px;}
-.fenye ul li{float: left;}
-.fenye ul li a{display: block;width: 33px;height: 23px;margin-left: 22px;font-size: 14px;line-height: 23px;color: white;background: #c6c6c6;border-radius: 2px;text-align: center;}
-.fenye ul li a:hover{background: #00b19a;transition: 0.5s;}
+ul.pagination {    height: 42px;    color: #666;    padding: 27px 0}
+ul.pagination li{display: inline-block;  float: left;  min-width: 40px;    display: inline-block;  height: auto; margin-top: 0px; width: auto; border-bottom: none;}
+ul.pagination li.disabled { padding: 5px;   display: inline-block;    min-width: 32px;    height: 32px;    line-height: 32px;    font-size: 14px;    background: #fff;    box-shadow: 0 1px 3px 0 rgba(0,0,0,.05);    margin: 0 5px;    color: #666;    text-align: center}
+ ul.pagination li.active { padding: 5px; display: inline-block;    float: left;    width: 40px;    display: inline-block;    min-width: 32px;    height: 32px;    line-height: 32px;    font-size: 14px;    background: #fff;    box-shadow: 0 1px 3px 0 rgba(0,0,0,.05);    margin: 0 5px;    color: #666;    text-align: center}
+ul.pagination li a {    display: inline-block;   padding: 5px;  min-width: 32px;    height: 32px;    line-height: 32px;    font-size: 14px;    background: #fff;    box-shadow: 0 1px 3px 0 rgba(0,0,0,.05);    margin: 0 5px;    color: #666;    text-align: center}
+ul.pagination li a:hover {    border-color: #ff552e;    color: #ff552e}
+ul.pagination li.active {    background-color: #ff552e;    border-color: #ff552e;    color: #fff}
+ul.pagination li .prev,.pagination .next {    position: relative;    top: 1px;    font-size: 18px;    font-family: "\5B8B\4F53";    font-weight: 700}
+ul.pagination li a.disabled {    color: #ddd}
+
 .xiayiye{width: 56px;height: 23px;font-size: 14px ;color: #969696;line-height: 23px;text-align: center;display: block;float: left;margin-left: 44px;}
 
 /**品牌详情页 */
@@ -538,7 +645,7 @@ td,th{padding:0;}
 .b_con3-right-2 ul li p{display: block;width: 200px;float: left;margin: 10px 0px 0px 20px;color: #818181;line-height: 24px;}
 .b_con3-right-2 ul li p font{color: #d80000;}
 
-.b_con3-right-3{width: 337px;height: 304px;background: white;margin-top: 20px;}
+.b_con3-right-3{width: 337px; background: white;margin-top: 20px;}
 .b_con3-right-3 ul{width: 100%;height: 100%;}
 .b_con3-right-3 ul li{width: 100%;height: 47px;border-bottom: 2px solid #f9f9f9;}
 .b_con3-right-3 ul li h1{display: block;width: 317px;height: 100%;font-size: 16px;color: #575757;line-height: 59px;padding-left: 20px;}
