--- a/public/frontend/css/index.css
+++ b/public/frontend/css/index.css
@@ -106,6 +106,7 @@ td,th{padding:0;}
 .con2-left-right{width: 553px;height: 400px;float: left;margin: 17px 0px 0px 20px; }
 .con2-left-right dl{width: 175px;height: 200px;float: left;margin-left: 9px;}
 .con2-left-right dl dt{width: 175px;height: 140px; position: relative;}
+.con2-left-right dl dt:hover a img{    opacity: 0.6;}
 .con2-left-right dl dt .brandinfo{position: absolute; top:5px; left: 10px;}
 .con2-left-right dl dt strong{display: block;width: 160px;height: 17px;font-size: 17px;color: #676767;float: left;margin: 10px 0px 0px 9px;line-height: 17px;font-weight: normal;}
 .con2-left-right dl dt p{display: block;width: 160px;height: 12px;font-size: 12px;color: #676767;line-height: 12px;float: left;margin: 6px 0px 0px 9px;font-weight: normal;}
@@ -249,6 +250,10 @@ td,th{padding:0;}
     margin-left: auto;
     clear: both;
 }
+.flink{margin-bottom: 10px;}
+.flink .center{background: #fff;}
+.flink ul li{display: inline-block; padding:10px 15px; }
+.flink ul li a{color: #1c1c1c;}
 .footer a {    color: #7281AD;}
 
 .footer a:hover {    color: #fff;}
