--- a/public/frontend/css/index.css
+++ b/public/frontend/css/index.css
@@ -496,7 +496,7 @@ ul.pagination li a.disabled {    color: #ddd}
 .b_con-right input{width: 107px;height: 36px;border: 1px solid #bdbdbd;border-radius: 5px;color: #494946;background: white;float: left;margin-left: 28px;}
 .b_con-right input:hover{background: #df0000;color: white;border: 1px solid #df0000;}
 .b_con1-bottom{width: 100%;height: 42px;float: left;}
-.b_con1-bottom p{display: block;height: 42px;width: 100px;float: left;margin-left: 20px;font-size: 12px;color: #7f7f7f;line-height: 42px;}
+.b_con1-bottom p{display: block;height: 42px;margin-left: 20px;font-size: 12px;color: #7f7f7f;line-height: 42px;}
 
 
 .b_con2{width: 1198px;height: 50px;background: white;border: 1px solid #f2f2f2;margin-top: 20px;}
@@ -524,68 +524,29 @@ ul.pagination li a.disabled {    color: #ddd}
 .ntable{margin-top: 20px;float: left;}
 .ntable tr td{border: 1px solid #e6f0f7;height: 38px;padding-left: 12px;     padding: 6px 5px 6px 5px;}
 .tb{background: #f2f9fc;}
-.b_con3-2{height: 689px;width: 799px;float: left;margin-left: 20px;}
+.b_con3-2{width: 799px;float: left;margin-left: 20px;}
 .b_con3-2 .xiaokuai2{width: 3px;height: 18px;background: #12b7a1;float: left;}
-.b_con3-2 h1{display: block;height: 18px;width: 770px;font-size: 18px;color: #5f5f5f;line-height: 18px;float: left;margin-left: 10px;}
+.b_con3-2 h2{display: block;height: 18px;width: 770px;font-size: 18px;color: #5f5f5f;line-height: 18px;float: left;margin-left: 10px;}
 .b_con3-2-xian{width: 649px;height: 1px;background: #5f5f5f;float: right;}
 .b_con1-right-con{width: 513px;height: 140px;float: left;margin: 17px 0px 0px 30px;border-bottom: 1px dashed #e1e1e1;}
-.b_con1-right-con ul{float: left;width: 228px;height: 130px;}
-.b_con1-right-con ul li p{display: block;font-size: 12px;height: 12px;line-height: 12px;color: #9d9c9d;margin-top: 15px;}
-.b_con1-right-con ul li p font{color: #6e6460;margin-left: 10px;}
 
+.b_con1-right-con  p{display: block;font-size: 12px;height: 12px;line-height: 12px;color: #9d9c9d;margin-top: 15px;}
+.b_con1-right-con ul li p span{color: #6e6460;margin-left: 10px;}
 .b_con3-2-p1{width: 788px;height: 97px;float: left;margin: 14px 0px 0px 14px;font-size: 14px;color: #7d7d7d;letter-spacing: 1px;line-height: 28px;}
 .b_con3-2-tu{width: 788px;height: 264px;float: left;margin-left: 14px;}
 .b_con3-2-tu li{width: 182px;height: 122px;float: left;margin-left: 20px;margin-top: 20px;}
 .b_con3-2-tu li img{width: 100%;height: 100%;}
-
 .b_con3-2-p2{width: 788px;height: 260px;float: left;margin: 14px 0px 0px 14px;}
 .b_con3-2-p2 li{margin-top: 15px;}
 .b_con3-2-p2 li p{display: block;font-size: 14px;color: #7d7d7d;letter-spacing: 1px;line-height: 28px;}
-
-.b_con3-3{height: 633px;width: 799px;float: left;margin-left: 20px;}
-.b_con3-3 .xiaokuai3{width: 3px;height: 18px;background: #12b7a1;float: left;}
-.b_con3-3 h1{display: block;height: 18px;width: 770px;font-size: 18px;color: #5f5f5f;line-height: 18px;float: left;margin-left: 10px;}
-.b_con3-3-xian{width: 649px;height: 1px;background: #5f5f5f;float: right;}
-
-.b_con3-3-ul1{width: 788px;height: 259px;float: left;margin: 14px 0px 0px 14px;}
-.b_con3-3-ul1 li{margin-top: 15px;}
-.b_con3-3-ul1 li p{display: block;font-size: 14px;color: #7d7d7d;letter-spacing: 1px;line-height: 28px;}
-.b_con3-3 h2{display: block;height: 14px;font-size: 14px;line-height: 14px;color: #555555;width: 700px;float: left;font-weight: normal;margin-left: 14px;}
-
-.b_con3-3-ul2{width: 788px;height: 259px;float: left;margin: 14px 0px 0px 14px;}
-.b_con3-3-ul2 li{margin-top: 15px;}
-.b_con3-3-ul2 li p{display: block;font-size: 14px;color: #7d7d7d;letter-spacing: 1px;line-height: 28px;}
-
-.b_con3-4{height: 410px;width: 799px;float: left;margin-left: 20px;}
-.b_con3-4 .xiaokuai4{width: 3px;height: 18px;background: #12b7a1;float: left;}
-.b_con3-4 h1{display: block;height: 18px;width: 770px;font-size: 18px;color: #5f5f5f;line-height: 18px;float: left;margin-left: 10px;}
-.b_con3-4-xian{width: 649px;height: 1px;background: #5f5f5f;float: right;}
-
-.b_con3-4 ul{width: 788px;height: 360px;float: left;margin: 14px 0px 0px 14px;}
-.b_con3-4 ul li{margin-top: 15px;}
-.b_con3-4 ul li p{display: block;font-size: 14px;color: #323232;letter-spacing: 1px;line-height: 28px;}
-
-.b_con3-5{height: 390px;width: 799px;float: left;margin-left: 20px;}
-.b_con3-5 .xiaokuai5{width: 3px;height: 18px;background: #12b7a1;float: left;}
-.b_con3-5 h1{display: block;height: 18px;width: 770px;font-size: 18px;color: #5f5f5f;line-height: 18px;float: left;margin-left: 10px;}
-.b_con3-4-xian{width: 649px;height: 1px;background: #5f5f5f;float: right;}
-
-.b_con3-5 ul{width: 788px;height: 360px;float: left;margin: 14px 0px 0px 14px;}
-.b_con3-5 ul li{margin-top: 15px;}
-.b_con3-5 ul li p{display: block;font-size: 14px;color: #7d7d7d;letter-spacing: 1px;line-height: 28px;}
-
 .b_con3-6{height: 365px;width: 799px;float: left;margin-left: 20px;}
 .b_con3-6 .xiaokuai6{width: 3px;height: 18px;background: #12b7a1;float: left;}
 .b_con3-6 h1{display: block;height: 18px;width: 770px;font-size: 18px;color: #5f5f5f;line-height: 18px;float: left;margin-left: 10px;}
 .b_con3-6 h1 font{color: #d40822;}
 .b_con3-6-xian{width: 629px;height: 1px;background: #d40822;float: right;}
-
 .b_con3-6 table{width: 788px;float: left;margin: 20px 0px 0px 14px;}
 .b_con3-6 table td{border: 1px solid #eaf1f6;padding-left: 12px;}
 .td_color{width: 20%;height: 38px;background: #f9f9f9;}
-
-
-
 .b_con3-7{width: 802px;height: 381px;float: left;margin-left: 20px;}
 .b_con3-7-top{width: 100%;height: 18px;}
 .b_con3-7-top h1{height: 18px;float: left;width: 310px;display: block;color: #5f5f5f;font-size: 18px;line-height: 18px;margin-left: 10px;}
