--- a/public/frontend/css/index.css
+++ b/public/frontend/css/index.css
@@ -666,15 +666,17 @@ ul.pagination li a.disabled {    color: #ddd}
 
 .bl_con3-right-1{width: 336px;height:657px ;background: white;}
 .bl_con3-right-1 h1{display: block;font-size: 16px;height: 16px;color: #575757;line-height: 16px;float: left;margin: 20px 0px 0px 20px;width: 299px;}
-.bl_con3-right-1 h1 a{font-size: 12px;color: #9c9c9c;float: right;font-weight: normal;}
+.bl_con3-right-1 h1 a{display: inline-block; font-size: 12px;color: #9c9c9c;float: right;font-weight: normal;}
 .bl_con3-right-1 h1 a:hover{color: #272727;}
 .bl_con3-right-1-xian{width: 100%;height: 2px;background: #f9f9f9;float: left;margin-top: 20px;}
-.bl_con3-right-1 ul{width: 299px;height: 570px;float: left;margin: 30px 0px 0px 20px;}
+.bl_con3-right-1 ul{width: 299px;height: 570px;float: left;margin: 0px 0px 0px 20px;}
 .bl_con3-right-1 ul li{width: 100%;height:87px ;border-bottom: 1px solid #eaeaea;margin-top: 22px;}
 .bl_con3-right-1 ul li img{display: block;width: 113px;height: 77px;float: left;}
+.bl_con3-right-1 ul li a.b_tit{font-size: 14px; font-weight: bold; color: #ff552e !important;}
 .a2{display: block;width: 177px;height: 100%;float: left;margin-left: 8px;color: #959393;font-size: 12px;line-height: 28px;margin-top: -6px;}
 .bl_con3-right-1 ul li a span{color: #e10000;}
-
+dl.paihangbf{display: inline-block; width: 180px;}
+.paihangbf dd{padding: 10px;}
 .bl_con3-right-2{width: 336px;height:885px ;background: white;margin-top: 20px;}
 .bl_con3-right-2 h1{display: block;font-size: 16px;height: 16px;color: #575757;line-height: 16px;float: left;margin: 20px 0px 0px 20px;width: 299px;}
 .bl_con3-right-2 h1 a{font-size: 12px;color: #9c9c9c;float: right;font-weight: normal;}
